--- a/index.html
+++ b/index.html
@@ -9,52 +9,52 @@
   <title>Connect Four</title>
 </head>
 <body>
-  <h1>CCONNECT FOUR</h1>
+  <h1>CONNECT FOUR</h1>
   <h2 id="message">Message</h2>
 
   <section class="board">
-		<div id="op0"></div>
-		<div id="op1"></div>
-		<div id="op2"></div>
-		<div id="op3"></div>
-		<div id="op4"></div>
-		<div id="op5"></div>
-		<div id="op6"></div>
-		<div id="op7"></div>
-		<div id="op8"></div>
-    <div id="op9"></div>
-		<div id="op10"></div>
-		<div id="op11"></div>
-		<div id="op12"></div>
-		<div id="op13"></div>
-		<div id="op14"></div>
-		<div id="op15"></div>
-		<div id="op16"></div>
-		<div id="op17"></div>
-    <div id="op18"></div>
-		<div id="op19"></div>
-		<div id="op20"></div>
-		<div id="op21"></div>
-		<div id="op22"></div>
-		<div id="op23"></div>
-		<div id="op24"></div>
-		<div id="op25"></div>
-		<div id="op26"></div>
-    <div id="op27"></div>
-		<div id="op28"></div>
-		<div id="op29"></div>
-		<div id="op30"></div>
-		<div id="op31"></div>
-		<div id="op32"></div>
-		<div id="op33"></div>
-		<div id="op34"></div>
-		<div id="op35"></div>
-    <div id="op36"></div>
-		<div id="op37"></div>
-		<div id="op38"></div>
-		<div id="op39"></div>
-		<div id="op40"></div>
-		<div id="op41"></div>
+		<div id="0"></div>
+		<div id="1"></div>
+		<div id="2"></div>
+		<div id="3"></div>
+		<div id="4"></div>
+		<div id="5"></div>
+		<div id="6"></div>
+		<div id="7"></div>
+		<div id="8"></div>
+    <div id="9"></div>
+		<div id="10"></div>
+		<div id="11"></div>
+		<div id="12"></div>
+		<div id="13"></div>
+		<div id="14"></div>
+		<div id="15"></div>
+		<div id="16"></div>
+		<div id="17"></div>
+    <div id="18"></div>
+		<div id="19"></div>
+		<div id="20"></div>
+		<div id="21"></div>
+		<div id="22"></div>
+		<div id="23"></div>
+		<div id="24"></div>
+		<div id="25"></div>
+		<div id="26"></div>
+    <div id="27"></div>
+		<div id="28"></div>
+		<div id="29"></div>
+		<div id="30"></div>
+		<div id="31"></div>
+		<div id="32"></div>
+		<div id="33"></div>
+		<div id="34"></div>
+		<div id="35"></div>
+    <div id="36"></div>
+		<div id="37"></div>
+		<div id="38"></div>
+		<div id="39"></div>
+		<div id="40"></div>
+		<div id="41"></div>
 	</section>    
 </body>
 </html>
