--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
   <h1>CONNECT FOUR</h1>
+
+  <img
+        width="175"
+        height="175"
+        id="mklogo"
+        src="./assets/images/mklogo.png"
+        alt="Mortal Kombat Logo"
+      />
+
   <h2 id="message">Message</h2>
 
   <section class="board">
@@ -56,5 +65,8 @@
 		<div id="40"></div>
 		<div id="41"></div>
 	</section>    
+  <div class="circleBase circle1"></div>
+  <div class="circleBase circle2"></div>
+  <button id="reset-button" type="reset" >Reset</button>
 </body>
 </html>
