--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bokor&display=swap" rel="stylesheet">
+
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +15,8 @@
   <title>Connect Four</title>
 </head>
 <body>
-  <h1>CONNECT FOUR</h1>
-
+  <h1>MORTAL KOMBAT</h1>
+<h2>CONNECT FOUR</h2>
   <img
         width="175"
         height="175"
