--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./css/style.css">
 	<script defer src="./js/app.js"></script>
   <title>Connect Four</title>
+  <link rel="icon" type="image/png" href="/assets/images/mkicon.png" sizes="12x12">
 </head>
 <body>
   <h1>MORTAL KOMBAT</h1>
