--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script defer src="./js/app.js"></script>
   <title>Connect Four</title>
   <link rel="icon" type="image/png" href="/assets/images/mkicon.png" sizes="12x12">
+
 </head>
 <body>
   <h1>MORTAL KOMBAT</h1>
@@ -25,6 +26,8 @@
         src="./assets/images/mklogo.png"
         alt="Mortal Kombat Logo"
       />
+
+<!-- <img class="chip" src="./assets/images/mklogo.png"/> -->
 
   <h2 id="message">Message</h2>
 
