add flebox columns

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
 </head>
 <body>
+
+  <div class="flexbox-container"></div>
+
+<div class="flex-box-item flexbox-item-1">
+
+</div>
+
+  <div class="flex-box-item flexbox-item-2">
   <h1>MORTAL KOMBAT</h1>
 <h2>CONNECT FOUR</h2>
   <img
@@ -78,6 +86,9 @@
   <div class="circleBase circle1"></div>
   <div class="circleBase circle2"></div>
   <button id="reset-button" type="reset" >Reset</button>
+</div>
+<div class="flex-box-item flexbox-item-3">
+</div>
 </body>
 </html>
 
