fixed flex rows

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
   <div class="flexbox-container"></div>
 
 <div class="flex-box-item flexbox-item-1">
-
+  <img
+  width="175"
+  height="175"
+  id="mklogo"
+  src="./assets/images/mklogo.png"
+  alt="Mortal Kombat Logo"
+/>
 </div>
 
   <div class="flex-box-item flexbox-item-2">
@@ -88,7 +94,16 @@
   <button id="reset-button" type="reset" >Reset</button>
 </div>
 <div class="flex-box-item flexbox-item-3">
+  <img
+        width="175"
+        height="175"
+        id="mklogo"
+        src="./assets/images/mklogo.png"
+        alt="Mortal Kombat Logo"
+      />
 </div>
+<div class="axis main-axis"></div>
+<div class="axis cross-axis"></div>
 </body>
 </html>
 
