--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <div class="flex-box-item flexbox-item-2">
   <h1>MORTAL KOMBAT</h1>
 <h2>CONNECT FOUR</h2>
-  <img
+  <!-- <img
         width="175"
         height="175"
         id="mklogo"
         src="./assets/images/mklogo.png"
         alt="Mortal Kombat Logo"
-      />
+      /> -->
 
 <!-- <img class="chip" src="./assets/images/mklogo.png"/> -->
 
@@ -89,8 +89,8 @@
 		<div id="40"></div>
 		<div id="41"></div>
 	</section>    
-  <div class="circleBase circle1"></div>
-  <div class="circleBase circle2"></div>
+  <!-- <div class="circleBase circle1"></div>
+  <div class="circleBase circle2"></div> -->
   <button id="reset-button" type="reset" >Reset</button>
 </div>
 <div class="flex-box-item flexbox-item-3">
