add and style images

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
   src="./assets/images/mklogo.png"
   alt="Mortal Kombat Logo"
 />
+
+<img
+        width="300"
+        height="446"
+        id="mklogo"
+        src="./assets/images/liukang.png"
+        alt="Mortal Kombat Logo"
+      />
 </div>
 
   <div class="flex-box-item flexbox-item-2">
