add image and style

--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
         src="./assets/images/mklogo.png"
         alt="Mortal Kombat Logo"
       />
+      <img
+        width="275"
+        height="475"
+        id="mklogo"
+        src="./assets/images/raiden.png"
+        alt="Mortal Kombat Logo"
+      />
 </div>
 <div class="axis main-axis"></div>
 <div class="axis cross-axis"></div>
