change images and styling

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
         alt="Mortal Kombat Logo"
       />
       <img
-        width="275"
-        height="475"
+        width="325"
+        height="433"
         id="mklogo"
-        src="./assets/images/raiden.png"
+        src="./assets/images/subzero.png"
         alt="Mortal Kombat Logo"
       />
 </div>
