--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,37 +12,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
-	<script defer src="./js/app.js"></script>
+  <script defer src="./js/app.js"></script>
   <title>Connect Four</title>
   <link rel="icon" type="image/png" href="/assets/images/mkicon.png" sizes="12x12">
 
 </head>
+
 <body>
 
   <div class="flexbox-container"></div>
 
-<div class="flex-box-item flexbox-item-1">
-  <img
-  width="125"
-  height="125"
-  id="mklogo"
-  src="./assets/images/mklogo.png"
-  alt="Mortal Kombat Logo"
-/>
+  <div class="flex-box-item flexbox-item-1">
+    <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
-<img
-        width="300"
-        height="446"
-        id="mklogo"
-        src="./assets/images/liukang.png"
-        alt="Mortal Kombat Logo"
-      />
-</div>
+    <img width="300" height="446" id="mklogo" src="./assets/images/liukang.png" alt="Mortal Kombat Logo" />
+  </div>
 
   <div class="flex-box-item flexbox-item-2">
-  <h1>MORTAL KOMBAT</h1>
-<h2>CONNECT FOUR</h2>
-  <!-- <img
+    <h1>MORTAL KOMBAT</h1>
+    <h2>CONNECT FOUR</h2>
+    <!-- <img
         width="175"
         height="175"
         id="mklogo"
@@ -49,76 +39,66 @@
         alt="Mortal Kombat Logo"
       /> -->
 
-<!-- <img class="chip" src="./assets/images/mklogo.png"/> -->
+    <!-- <img class="chip" src="./assets/images/mklogo.png"/> -->
 
-  <h2 id="message">Message</h2>
+    <h2 id="message">Message</h2>
 
-  <section class="board">
-		<div id="0"></div>
-		<div id="1"></div>
-		<div id="2"></div>
-		<div id="3"></div>
-		<div id="4"></div>
-		<div id="5"></div>
-		<div id="6"></div>
-		<div id="7"></div>
-		<div id="8"></div>
-    <div id="9"></div>
-		<div id="10"></div>
-		<div id="11"></div>
-		<div id="12"></div>
-		<div id="13"></div>
-		<div id="14"></div>
-		<div id="15"></div>
-		<div id="16"></div>
-		<div id="17"></div>
-    <div id="18"></div>
-		<div id="19"></div>
-		<div id="20"></div>
-		<div id="21"></div>
-		<div id="22"></div>
-		<div id="23"></div>
-		<div id="24"></div>
-		<div id="25"></div>
-		<div id="26"></div>
-    <div id="27"></div>
-		<div id="28"></div>
-		<div id="29"></div>
-		<div id="30"></div>
-		<div id="31"></div>
-		<div id="32"></div>
-		<div id="33"></div>
-		<div id="34"></div>
-		<div id="35"></div>
-    <div id="36"></div>
-		<div id="37"></div>
-		<div id="38"></div>
-		<div id="39"></div>
-		<div id="40"></div>
-		<div id="41"></div>
-	</section>    
-  <!-- <div class="circleBase circle1"></div>
+    <section class="board">
+      <div id="0"></div>
+      <div id="1"></div>
+      <div id="2"></div>
+      <div id="3"></div>
+      <div id="4"></div>
+      <div id="5"></div>
+      <div id="6"></div>
+      <div id="7"></div>
+      <div id="8"></div>
+      <div id="9"></div>
+      <div id="10"></div>
+      <div id="11"></div>
+      <div id="12"></div>
+      <div id="13"></div>
+      <div id="14"></div>
+      <div id="15"></div>
+      <div id="16"></div>
+      <div id="17"></div>
+      <div id="18"></div>
+      <div id="19"></div>
+      <div id="20"></div>
+      <div id="21"></div>
+      <div id="22"></div>
+      <div id="23"></div>
+      <div id="24"></div>
+      <div id="25"></div>
+      <div id="26"></div>
+      <div id="27"></div>
+      <div id="28"></div>
+      <div id="29"></div>
+      <div id="30"></div>
+      <div id="31"></div>
+      <div id="32"></div>
+      <div id="33"></div>
+      <div id="34"></div>
+      <div id="35"></div>
+      <div id="36"></div>
+      <div id="37"></div>
+      <div id="38"></div>
+      <div id="39"></div>
+      <div id="40"></div>
+      <div id="41"></div>
+    </section>
+    <!-- <div class="circleBase circle1"></div>
   <div class="circleBase circle2"></div> -->
-  <button id="reset-button" type="reset" >Reset</button>
-</div>
-<div class="flex-box-item flexbox-item-3">
-  <img
-        width="125"
-        height="125"
-        id="mklogo"
-        src="./assets/images/mklogo.png"
-        alt="Mortal Kombat Logo"
-      />
-      <img
-        width="325"
-        height="433"
-        id="mklogo"
-        src="./assets/images/subzero.png"
-        alt="Mortal Kombat Logo"
-      />
-</div>
-<div class="axis main-axis"></div>
-<div class="axis cross-axis"></div>
-</body>
-</html>
+    <button id="reset-button" type="reset">Reset</button>
+  </div>
+  <div class="flex-box-item flexbox-item-3">
 
+    <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
+
+    <img width="325" height="467" id="mklogo" src="./assets/images/scorpion.png" alt="Scorpion" />
+  </div>
+  <div class="axis main-axis"></div>
+  <div class="axis cross-axis"></div>
+</body>
+
+</html>
