add to read me file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="flex-box-item flexbox-item-1">
     <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
-    <img width="300" height="446" id="mklogo" src="./assets/images/liukang.png" alt="Mortal Kombat Logo" />
+    <img width="400" height="533" id="mklogo" src="./assets/images/liukang3.png" alt="Liu Kang" />
   </div>
 
   <div class="flex-box-item flexbox-item-2">
