adjust images and styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
   <div class="flex-box-item flexbox-item-1">
     <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
-    <img width="400" height="533" id="mklogo" src="./assets/images/liukang3.png" alt="Liu Kang" />
+    <img width="350" height="466" id="mklogo" src="./assets/images/liukang3.png" alt="Liu Kang" />
+
+    <h3>Player 1</h3>
+
   </div>
 
   <div class="flex-box-item flexbox-item-2">
@@ -96,6 +99,8 @@
 
 
     <img width="325" height="467" id="mklogo" src="./assets/images/scorpion.png" alt="Scorpion" />
+
+    <h4>Player 2</h4>
 
   </div>
 
