--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <body>
 
-  <div class="flexbox-container"></div>
 
   <div class="flex-box-item flexbox-item-1">
-    <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
+    <div id="player1">
+      <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
-    <img width="350" height="466" id="mklogo" src="./assets/images/liukang3.png" alt="Liu Kang" />
-
+      <img width="350" height="466" src="./assets/images/liukang3.png" alt="Liu Kang" />
+    </div>
     <h3>Player 1</h3>
 
   </div>
@@ -95,18 +95,16 @@
 
   <div class="flex-box-item flexbox-item-3">
 
-    <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
+    <div id="player2">
+    <img width="125" height="125" id="mklogo2" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
 
-    <img width="325" height="467" id="mklogo" src="./assets/images/scorpion.png" alt="Scorpion" />
+    <img width="325" height="467" src="./assets/images/scorpion.png" alt="Scorpion" />
 
     <h4>Player 2</h4>
-
+      </div>
   </div>
 
-
-  <div class="axis main-axis"></div>
-  <div class="axis cross-axis"></div>
 </body>
 
 </html>
