fix borders again

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 
 <body>
 
-
-  <div class="flex-box-item flexbox-item-1">
+<div class="body-content">
+  <div class="liukang flex-box-item flexbox-item-1">
     <div id="player1">
-      <img width="125" height="125" id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
+      <img id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
-      <img width="350" height="466" src="./assets/images/liukang3.png" alt="Liu Kang" />
+      <img src="./assets/images/liukang3.png" alt="Liu Kang" />
+      <h3>Player 1</h3>
     </div>
-    <h3>Player 1</h3>
+    
 
   </div>
 
@@ -93,18 +94,18 @@
 
   </div>
 
-  <div class="flex-box-item flexbox-item-3">
+  <div class="scorpion flex-box-item flexbox-item-3">
 
     <div id="player2">
-    <img width="125" height="125" id="mklogo2" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
+    <img id="mklogo2" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
 
-    <img width="325" height="467" src="./assets/images/scorpion.png" alt="Scorpion" />
+    <img src="./assets/images/scorpion.png" alt="Scorpion" />
 
     <h4>Player 2</h4>
       </div>
   </div>
-
+</div>
 </body>
 
 </html>
