--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
 
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bokor&display=swap" rel="stylesheet">
@@ -37,7 +42,7 @@
 
   <div class="flex-box-item flexbox-item-2">
 
-    <h1>MORTAL KOMBAT</h1>
+    <h1 id="title">MORTAL KOMBAT</h1>
     <h2>CONNECT FOUR</h2>
 
     <h2 id="message">Message</h2>
