--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="player1">
       <img id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
-      <img src="./assets/images/liukang3.png" alt="Liu Kang" />
+      <img id="liu-kang" src="./assets/images/liukang3.png" alt="Liu Kang" />
       <h3>Player 1</h3>
     </div>
     
@@ -92,8 +92,6 @@
       <div class="openings" id="41"></div>
     </section>
 
-  <!-- <div class="circleBase circle1"></div>
-  <div class="circleBase circle2"></div> -->
 
     <button id="reset-button" type="reset">Reset</button>
 
