--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <img id="mklogo2" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
 
-    <img src="./assets/images/scorpion.png" alt="Scorpion" />
+    <img id="its-scorpion" src="./assets/images/scorpion.png" alt="Scorpion" />
 
     <h4>Player 2</h4>
       </div>
