--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 
 <head>
 
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,87 +25,87 @@
 
 <body>
 
-<div class="body-content">
-  <div class="liukang flex-box-item flexbox-item-1">
-    <div id="player1">
-      <img id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
+  <div class="body-content">
+    <div class="liukang flex-box-item flexbox-item-1">
+      <div id="player1">
+        <img id="mklogo" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
 
-      <img id="liu-kang" src="./assets/images/liukang3.png" alt="Liu Kang" />
-      <h3>Player 1</h3>
-    </div>
-    
-
-  </div>
-
-  <div class="flex-box-item flexbox-item-2">
-
-    <h1 id="title">MORTAL KOMBAT</h1>
-    <h2>CONNECT FOUR</h2>
-
-    <h2 id="message">Message</h2>
-
-    <section class="board">
-      <div class="openings" id="0"></div>
-      <div class="openings" id="1"></div>
-      <div class="openings" id="2"></div>
-      <div class="openings" id="3"></div>
-      <div class="openings" id="4"></div>
-      <div class="openings" id="5"></div>
-      <div class="openings" id="6"></div>
-      <div class="openings" id="7"></div>
-      <div class="openings" id="8"></div>
-      <div class="openings" id="9"></div>
-      <div class="openings" id="10"></div>
-      <div class="openings" id="11"></div>
-      <div class="openings" id="12"></div>
-      <div class="openings" id="13"></div>
-      <div class="openings" id="14"></div>
-      <div class="openings" id="15"></div>
-      <div class="openings" id="16"></div>
-      <div class="openings" id="17"></div>
-      <div class="openings" id="18"></div>
-      <div class="openings" id="19"></div>
-      <div class="openings" id="20"></div>
-      <div class="openings" id="21"></div>
-      <div class="openings" id="22"></div>
-      <div class="openings" id="23"></div>
-      <div class="openings" id="24"></div>
-      <div class="openings" id="25"></div>
-      <div class="openings" id="26"></div>
-      <div class="openings" id="27"></div>
-      <div class="openings" id="28"></div>
-      <div class="openings" id="29"></div>
-      <div class="openings" id="30"></div>
-      <div class="openings" id="31"></div>
-      <div class="openings" id="32"></div>
-      <div class="openings" id="33"></div>
-      <div class="openings" id="34"></div>
-      <div class="openings" id="35"></div>
-      <div class="openings" id="36"></div>
-      <div class="openings" id="37"></div>
-      <div class="openings" id="38"></div>
-      <div class="openings" id="39"></div>
-      <div class="openings" id="40"></div>
-      <div class="openings" id="41"></div>
-    </section>
-
-
-    <button id="reset-button" type="reset">Reset</button>
-
-  </div>
-
-  <div class="scorpion flex-box-item flexbox-item-3">
-
-    <div id="player2">
-    <img id="mklogo2" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
-
-
-    <img id="its-scorpion" src="./assets/images/scorpion.png" alt="Scorpion" />
-
-    <h4>Player 2</h4>
+        <img id="liu-kang" src="./assets/images/liukang3.png" alt="Liu Kang" />
+        <h3>Player 1</h3>
       </div>
+
+
+    </div>
+
+    <div class="flex-box-item flexbox-item-2">
+
+      <h1 id="title">MORTAL KOMBAT</h1>
+      <h2>CONNECT FOUR</h2>
+
+      <h2 id="message">Message</h2>
+
+      <section class="board">
+        <div class="openings" id="0"></div>
+        <div class="openings" id="1"></div>
+        <div class="openings" id="2"></div>
+        <div class="openings" id="3"></div>
+        <div class="openings" id="4"></div>
+        <div class="openings" id="5"></div>
+        <div class="openings" id="6"></div>
+        <div class="openings" id="7"></div>
+        <div class="openings" id="8"></div>
+        <div class="openings" id="9"></div>
+        <div class="openings" id="10"></div>
+        <div class="openings" id="11"></div>
+        <div class="openings" id="12"></div>
+        <div class="openings" id="13"></div>
+        <div class="openings" id="14"></div>
+        <div class="openings" id="15"></div>
+        <div class="openings" id="16"></div>
+        <div class="openings" id="17"></div>
+        <div class="openings" id="18"></div>
+        <div class="openings" id="19"></div>
+        <div class="openings" id="20"></div>
+        <div class="openings" id="21"></div>
+        <div class="openings" id="22"></div>
+        <div class="openings" id="23"></div>
+        <div class="openings" id="24"></div>
+        <div class="openings" id="25"></div>
+        <div class="openings" id="26"></div>
+        <div class="openings" id="27"></div>
+        <div class="openings" id="28"></div>
+        <div class="openings" id="29"></div>
+        <div class="openings" id="30"></div>
+        <div class="openings" id="31"></div>
+        <div class="openings" id="32"></div>
+        <div class="openings" id="33"></div>
+        <div class="openings" id="34"></div>
+        <div class="openings" id="35"></div>
+        <div class="openings" id="36"></div>
+        <div class="openings" id="37"></div>
+        <div class="openings" id="38"></div>
+        <div class="openings" id="39"></div>
+        <div class="openings" id="40"></div>
+        <div class="openings" id="41"></div>
+      </section>
+
+
+      <button id="reset-button" type="reset">Reset</button>
+
+    </div>
+
+    <div class="scorpion flex-box-item flexbox-item-3">
+
+      <div id="player2">
+        <img id="mklogo2" src="./assets/images/mklogo.png" alt="Mortal Kombat Logo" />
+
+
+        <img id="its-scorpion" src="./assets/images/scorpion.png" alt="Scorpion" />
+
+        <h4>Player 2</h4>
+      </div>
+    </div>
   </div>
-</div>
 </body>
 
 </html>
